create and fix tests