@@ -1,133 +1,124 @@
 package com.ivan.projectmanager.repository;
 
-import com.ivan.projectmanager.config.ApplicationConfig;
 import com.ivan.projectmanager.model.Attachment;
-import jakarta.transaction.Transactional;
-import org.junit.Before;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.junit.runner.RunWith;
-import org.junit.Test;
+import org.springframework.test.context.jdbc.Sql;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
+
 import java.util.List;
-import java.util.Optional;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-
-@RunWith(SpringJUnit4ClassRunner.class)
-@ContextConfiguration(classes = ApplicationConfig.class)
-@Transactional
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration(classes = TestRepositoryConfiguration.class)
 public class AttachmentRepositoryImplTest {
+
     @Autowired
     private AttachmentRepository attachmentRepository;
 
-    @Before
-    void setUp() {
-    }
-
     @Test
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
     public void testGetAll() {
         List<Attachment> attachments = attachmentRepository.getAll();
-        assertFalse(attachments.isEmpty());
+        assertThat(attachments).isNotEmpty();
     }
 
     @Test
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
     public void testGetById() {
-        Optional<Attachment> optionalAttachment = attachmentRepository.getById(1);
-        assertTrue(optionalAttachment.isPresent());
-        assertEquals(1, optionalAttachment.get().getId());
+        Attachment attachment = attachmentRepository.getById(1L).orElse(null);
+        assertNotNull(attachment);
+        assertEquals(1, attachment.getId());
     }
 
     @Test
+    @DirtiesContext
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
+    public void testDeleteAttachment() {
+        Attachment attachment = attachmentRepository.getById(1L).orElse(null);
+        assertNotNull(attachment);
+
+        attachmentRepository.delete(attachment.getId());
+        assertFalse(attachmentRepository.getById(1L).isPresent());
+    }
+
+    @Test
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
     public void testUpdate() {
-        Optional<Attachment> optionalAttachment = attachmentRepository.getById(1);
-        assertTrue(optionalAttachment.isPresent());
-        Attachment attachment = optionalAttachment.get();
+        Attachment attachment = attachmentRepository.getById(1L).orElse(null);
+        assertNotNull(attachment);
+
         attachment.setTitle("Updated Title");
         attachment.setPath("/attachments/updated.pdf");
-        attachment.setTask(null);
-        Optional<Attachment> updatedAttachment = attachmentRepository.update(1, attachment);
-        assertTrue(updatedAttachment.isPresent());
-        assertEquals("Updated Title", updatedAttachment.get().getTitle());
-        assertEquals("/attachments/updated.pdf", updatedAttachment.get().getPath());
-        assertNull(updatedAttachment.get().getTask());
-    }
-    @Test
-    public void testDeleteAttachment() {
-        Attachment attachment = new Attachment();
-        attachment.setTitle("Test Attachment");
-        attachment.setPath("/attachments/test.pdf");
-        attachmentRepository.save(attachment);
-        attachmentRepository.delete(attachment.getId());
-        Optional<Attachment> deletedAttachment = attachmentRepository.getById(attachment.getId());
-        assertFalse( "Attachment should be deleted",deletedAttachment.isPresent());
+        Attachment updatedAttachment = attachmentRepository.update(1L, attachment).orElse(null);
+        assertNotNull(updatedAttachment);
+        assertEquals("Updated Title", updatedAttachment.getTitle());
+        assertEquals("/attachments/updated.pdf", updatedAttachment.getPath());
+        assertNotNull(updatedAttachment.getTask());
     }
 
+
     @Test
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
     public void testFindByTitleCriteria() {
-        Attachment attachment = new Attachment();
-        attachment.setTitle("Test Attachment");
-        attachment.setPath("/attachments/test.pdf");
-        attachmentRepository.save(attachment);
         List<Attachment> foundAttachments = attachmentRepository.findByTitleCriteria("Test Attachment");
-        assertFalse( "No attachments found",foundAttachments.isEmpty());
-        assertEquals(String.valueOf(1), foundAttachments.size(), "Incorrect number of attachments found");
-        assertEquals(attachment.getTitle(), foundAttachments.get(0).getTitle(), "Incorrect attachment found");
+        assertThat(foundAttachments).isNotEmpty();
+        assertThat(foundAttachments).hasSize(1);
+        assertThat(foundAttachments.getFirst().getTitle()).isEqualTo("Test Attachment");
     }
 
     @Test
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
     public void testFindByTitleJpql() {
-        Attachment attachment = new Attachment();
-        attachment.setTitle("Test Attachment");
-        attachment.setPath("/attachments/test.pdf");
-        attachmentRepository.save(attachment);
         List<Attachment> foundAttachments = attachmentRepository.findByTitleJpql("Test Attachment");
-        assertFalse( "No attachments found",foundAttachments.isEmpty());
-        assertEquals(String.valueOf(1), foundAttachments.size(), "Incorrect number of attachments found");
-        assertEquals(attachment.getTitle(), foundAttachments.get(0).getTitle(), "Incorrect attachment found");
+        assertThat(foundAttachments).isNotEmpty();
+        assertThat(foundAttachments).hasSize(1);
+        assertThat(foundAttachments.getFirst().getTitle()).isEqualTo("Test Attachment");
     }
 
     @Test
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
     public void testFindByTitleCriteriaFetch() {
-        Attachment attachment = new Attachment();
-        attachment.setTitle("Test Attachment");
-        attachment.setPath("/attachments/test.pdf");
-        attachmentRepository.save(attachment);
         List<Attachment> foundAttachments = attachmentRepository.findByTitleCriteriaFetch("Test Attachment");
-        assertFalse( "No attachments found",foundAttachments.isEmpty());
-        assertEquals(String.valueOf(1), foundAttachments.size(), "Incorrect number of attachments found");
-        assertEquals(attachment.getTitle(), foundAttachments.get(0).getTitle(), "Incorrect attachment found");
-        assertNotNull(String.valueOf(foundAttachments.get(0).getTask()), "Task not lazily fetched");
+        assertThat(foundAttachments).isNotEmpty();
+        assertThat(foundAttachments).hasSize(1);
+        assertThat(foundAttachments.getFirst().getTitle()).isEqualTo("Test Attachment");
+        assertThat(foundAttachments.getFirst().getTask()).isNotNull();
     }
 
     @Test
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
     public void testFindByTitleJpqlFetch() {
-        Attachment attachment = new Attachment();
-        attachment.setTitle("Test Attachment");
-        attachment.setPath("/attachments/test.pdf");
-        attachmentRepository.save(attachment);
         List<Attachment> foundAttachments = attachmentRepository.findByTitleJpqlFetch("Test Attachment");
-        assertFalse("No attachments found",foundAttachments.isEmpty());
-        assertEquals(String.valueOf(1), foundAttachments.size(), "Incorrect number of attachments found");
-        assertEquals(attachment.getTitle(), foundAttachments.get(0).getTitle(), "Incorrect attachment found");
-        assertNotNull(String.valueOf(foundAttachments.get(0).getTask()), "Task not lazily fetched");
+        assertThat(foundAttachments).isNotEmpty();
+        assertThat(foundAttachments).hasSize(1);
+        assertThat(foundAttachments.getFirst().getTitle()).isEqualTo("Test Attachment");
+        assertThat(foundAttachments.getFirst().getTask()).isNotNull();
     }
 
     @Test
+    @Sql("classpath:data/attachmentrepositorytests/insert-attachments.sql")
+    @Sql(scripts = {"classpath:data/attachmentrepositorytests/delete-attachments.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
     public void testFindByTitleWithEntityGraphFetch() {
-        Attachment attachment = new Attachment();
-        attachment.setTitle("Test Attachment");
-        attachment.setPath("/attachments/test.pdf");
-        attachmentRepository.save(attachment);
         List<Attachment> foundAttachments = attachmentRepository.findByTitleWithEntityGraphFetch("Test Attachment");
-        assertFalse("No attachments found",foundAttachments.isEmpty());
-        assertEquals(String.valueOf(1), foundAttachments.size(), "Incorrect number of attachments found");
-        assertEquals(attachment.getTitle(), foundAttachments.get(0).getTitle(), "Incorrect attachment found");
-        assertNotNull(String.valueOf(foundAttachments.get(0).getTask()), "Task not lazily fetched");
+        assertThat(foundAttachments).isNotEmpty();
+        assertThat(foundAttachments).hasSize(1);
+        assertThat(foundAttachments.getFirst().getTitle()).isEqualTo("Test Attachment");
+        assertThat(foundAttachments.getFirst().getTask()).isNotNull();
     }
 }
